--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "typeorm:migration:generate": "npm run typeorm -- migration:generate -f src/orm-config/ormconfig-stocks.json -n",
     "typeorm:migration:run": "npm run typeorm -- migration:run -f src/orm-config/ormconfig-stocks.json",
     "typeorm:migration:revert": "npm run typeorm -- migration:revert -f src/orm-config/ormconfig-stocks.json",
-
     "typeorm:seed:create": "npm run typeorm -- migration:create -f src/orm-config/ormconfig-stocks-seed.json -n",
     "typeorm:seed:run": "npm run typeorm -- migration:run -f src/orm-config/ormconfig-stocks-seed.json"
   },
@@ -35,6 +34,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/schedule": "^1.0.1",
     "@nestjs/typeorm": "^7.1.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
